# Crop_Advisor_Project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
api/: main.py
api/routes/: data.py  predict.py  recommend.py
api/utils/: model_loader.py  preprocess.py
aws/: s3_config.yaml  sagemaker_config.yaml
aws/lambda_functions/: inference.py
cicd/: mlops_config.yaml
cicd/.github/workflows/: cd.yml  ci.yml
data/: knowledge_base.txt
data/db/: predictions.db
data/embeddings/: metadata.txt
database/: db_utils.py
database/migrations/: init_db.sql
database/vector_db/: embed_data.py
docker/: Dockerfile.api  Dockerfile.frontend  docker-compose.yml
docs/: api_docs.md  model_docs.md  setup_guide.md
frontend/: app.py
frontend/components/: dashboard.py  upload.py
models/classification/: train_classifier.py  train_cnn.py
models/clustering/: train_clustering.py
models/regression/: train_regression.py
models/rnn_transformer/: train_rnn.py
notebooks/: data_exploration.ipynb
rag/: embedder.py  generator.py  retriever.py
scripts/: data_pipeline.py  deploy_pipeline.py  init_db.py  train_pipeline.py
tests/: test_api.py  test_db.py  test_models.py
